# toolchains_msvc

./: .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.md  extensions.bzl
.github/workflows/: build.yml  test.yml
docs/: BUILD.bazel  FEATURES.md  HERMETICITY.md  Reproducibility.md  ToolchainExtension.md  legacy_feature_name.md
docs.md/: FEATURES.md
docs/dev/: PrivateFeatures.md
extensions/: toolchain.bzl
overlays/: BUILD.bazel  common.bzl
overlays/clang/: BUILD.root.tpl
overlays/llvm/: BUILD.bazel  BUILD.root.linux.tpl  BUILD.root.tpl
overlays/msvc/: BUILD.root.tpl
overlays/toolchain/: BUILD.args-clang.bazel  BUILD.args-clang.tpl  BUILD.args-msvc.bazel  BUILD.args-msvc.tpl  BUILD.bazel  BUILD.features.bazel  BUILD.features.tpl
overlays/toolchain/cl/: BUILD.toolchain.tpl
overlays/toolchain/clang/: BUILD.args.tpl  BUILD.features.bazel  BUILD.toolchain.tpl  BUILD.tools.tpl
overlays/toolchain/clang-cl/: BUILD.args.tpl  BUILD.bazel  BUILD.toolchain.tpl  BUILD.tools.tpl
overlays/toolchain/msvc/: BUILD.args.tpl  BUILD.artifacts.bazel  BUILD.bazel  BUILD.features.bazel  BUILD.toolchain.tpl  BUILD.tools.tpl
overlays/toolchain/msvc-cl/: BUILD.bazel  BUILD.toolchain.tpl
overlays/winsdk/: BUILD.root.tpl
private/: BUILD.bazel  common.bzl  flags.bzl  libs.bzl  llvm_repo.bzl  lock_file_repo.bzl  msiutil_repo.bzl  msvc_repo.bzl  msvc_toolchains_repo.bzl  symlink_casemap.py  utils.bzl  vs_channel_manifest.bzl  winsdk_repo.bzl
research/: README.md  build.py  explore_vs_channel.py  sha256_files.py
research/minimal_cpp_project/my_app/: MyApp.cpp  MyApp.h  main.cpp
research/minimal_cpp_project/my_dyn_lib/include/my_dyn_lib/: Helpers.h
research/minimal_cpp_project/my_dyn_lib/src/private/: Helpers.cpp
research/minimal_cpp_project/my_lib/include/my/: App.h  EventLoop.h  Frame.h  Log.h
research/minimal_cpp_project/my_lib/src/private/: App.cpp  EventLoop.cpp  InternalStuff.cpp  InternalStuff.h  Log.cpp
tests/: README.md  check_hello_world.py  integration_test.py  test_host_arm64.bat  test_host_x64.bat
tests/all_hosts_all_targets/: BUILD.bazel  MODULE.bazel  main.cpp
tests/hello_world/: BUILD.bazel  MODULE.bazel
tests/one_host_one_target/: .bazelrc  BUILD.bazel  MODULE.bazel  main.cpp
tests/reproducible_projectA/: BUILD.bazel  MODULE.bazel
tests/reproducible_projectA/dyn_hello/: BUILD.bazel
tests/reproducible_projectA/hello_dll/: BUILD.bazel
tests/reproducible_projectA/hello_lib/: BUILD.bazel
tests/reproducible_projectA/hello_lib/include/hello_lib/: current_version.h
tests/reproducible_projectA/hello_world/: BUILD.bazel
tests/reproducible_projectB/: MODULE.bazel
tests/reproducible_projectB/dyn_hello/: BUILD.bazel
tests/reproducible_projectB/dyn_hello/include/dyn_hello/: get_winsdk.h
tests/reproducible_projectB/dyn_hello/src/: dyn_hello.cpp
tests/reproducible_projectB/hello_lib/: BUILD.bazel
tests/reproducible_projectB/hello_lib/src/: current_version.cpp
tests/reproducible_projectB/hello_world/: BUILD.bazel
tests/reproducible_projectB/hello_world/src/: main.cpp
tools/: BUILD.bazel  List-MsiCabs.ps1  Normalize-WinSdkLibNames.ps1  analyze_exec.py  explore_vs_channel.py
tools/msi_util/: .bazelrc  BUILD.bazel  MODULE.bazel
tools/msi_util/src/: cab.cpp  cab.hpp  cfb.cpp  cfb.hpp  main.cpp  msi.cpp  msi.hpp
