load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")
load("@rules_cc//cc/toolchains:feature_constraint.bzl", "cc_feature_constraint")
load("@rules_cc//cc/toolchains:feature_set.bzl", "cc_feature_set")
load("@rules_cc//cc/toolchains:mutually_exclusive_category.bzl", "cc_mutually_exclusive_category")

package(default_visibility = ["//visibility:public"])

cc_feature_set(
    name = "all_known_features",
    all_of = [
        ":no_legacy_features",
        ":compiler_input_flags",
        ":compiler_output_flags",
        ":include_paths",
        ":external_include_paths",
        ":preprocessor_defines",
        ":linker_input",
        ":libraries_to_link",
        ":library_search_directories",
        ":output_execpath_flags",
        ":linker_param_file",
        ":archiver_input",
        ":archiver_flags",
        ":strip_input",
        ":strip_output",
        ":parse_showincludes",
        ":no_dotd_file",
        ":dependency_file",
        ":default_compile_flags",
        ":default_cxx_compile_flags",
        ":default_c_compile_flags",
        ":default_assemble_flags",
        ":default_link_flags",
        ":default_archive_flags",
        ":default_strip_flags",
        ":default_link_libs",
        ":user_compile_flags",
        ":user_compile_defines",
        ":includes",
        ":user_system_include_paths",
        ":user_link_flags",
        ":dbg",
        ":fastbuild",
        ":opt",
        ":dbg_compile_flags",
        ":fastbuild_compile_flags",
        ":opt_compile_flags",
        ":dbg_link_flags",
        ":fastbuild_link_flags",
        ":opt_link_flags",
        ":treat_warnings_as_errors",
        ":generate_debug_symbols",
        ":static_runtime",
        ":debug_runtime",
        ":debug_dynamic_runtime",
        ":debug_static_runtime",
        ":release_dynamic_runtime",
        ":release_static_runtime",
        ":thinlto",
        ":fulllto",
        ":fdo_instrument",
        ":fdo_optimize",
        ":cxx_standard_14",
        ":cxx_standard_17",
        ":cxx_standard_20",
        ":cxx_standard_23",
        ":cxx_standard_26",
    ],
)

cc_feature_set(
    name = "default_features",
    all_of = [
        # Plumbing Features
        ":no_legacy_features",
        ":compiler_input_flags",
        ":compiler_output_flags",
        ":include_paths",
        ":external_include_paths",
        ":preprocessor_defines",
        ":linker_input",
        ":libraries_to_link",
        ":library_search_directories",
        ":output_execpath_flags",
        ":linker_param_file",
        ":archiver_input",
        ":archiver_flags",
        ":strip_input",
        ":strip_output",

        # Toolchain Policy Defaults
        ":default_compile_flags",
        ":default_cxx_compile_flags",
        ":default_c_compile_flags",
        ":default_assemble_flags",
        ":default_link_flags",
        ":default_archive_flags",
        ":default_strip_flags",
        ":default_link_libs",

        # Rule-Level Passthrough
        ":user_compile_flags",
        ":user_compile_defines",
        ":includes",
        ":user_system_include_paths",
        ":user_link_flags",

        # Runtime Linkage (Default configured)
        ":debug_dynamic_runtime",
        ":debug_static_runtime",
        ":release_dynamic_runtime",
        ":release_static_runtime",
    ],
)

# Plumbing Features
cc_feature(
    name = "no_legacy_features",
    feature_name = "no_legacy_features",
)

cc_feature(
    name = "compiler_input_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:compiler_input_flags",
)

cc_feature(
    name = "compiler_output_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:compiler_output_flags",
)

cc_feature(
    name = "include_paths",
    overrides = "@rules_cc//cc/toolchains/features/legacy:include_paths",
)

cc_feature(
    name = "external_include_paths",
    feature_name = "external_include_paths",
)

cc_feature(
    name = "preprocessor_defines",
    overrides = "@rules_cc//cc/toolchains/features/legacy:preprocessor_defines",
)

cc_feature(
    name = "linker_input",
    feature_name = "linker_input",
)

cc_feature(
    name = "libraries_to_link",
    overrides = "@rules_cc//cc/toolchains/features/legacy:libraries_to_link",
)

cc_feature(
    name = "library_search_directories",
    overrides = "@rules_cc//cc/toolchains/features/legacy:library_search_directories",
)

cc_feature(
    name = "output_execpath_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:output_execpath_flags",
)

cc_feature(
    name = "linker_param_file",
    overrides = "@rules_cc//cc/toolchains/features/legacy:linker_param_file",
)

cc_feature(
    name = "archiver_input",
    feature_name = "archiver_input",
)

cc_feature(
    name = "archiver_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:archiver_flags",
)

cc_feature(
    name = "strip_input",
    feature_name = "strip_input",
)

cc_feature(
    name = "strip_output",
    feature_name = "strip_output",
)

# Header Dependency Discovery
cc_feature(
    name = "parse_showincludes",
    feature_name = "parse_showincludes",
)

cc_feature(
    name = "no_dotd_file",
    feature_name = "no_dotd_file",
)

cc_feature(
    name = "dependency_file",
    overrides = "@rules_cc//cc/toolchains/features/legacy:dependency_file",
)

# Toolchain Policy Defaults
cc_feature(
    name = "default_compile_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:default_compile_flags",
)

cc_feature(
    name = "default_cxx_compile_flags",
    feature_name = "default_cxx_compile_flags",
)

cc_feature(
    name = "default_c_compile_flags",
    feature_name = "default_c_compile_flags",
)

cc_feature(
    name = "default_assemble_flags",
    feature_name = "default_assemble_flags",
)

cc_feature(
    name = "default_link_flags",
    feature_name = "default_link_flags",
)

cc_feature(
    name = "default_archive_flags",
    feature_name = "default_archive_flags",
)

cc_feature(
    name = "default_strip_flags",
    feature_name = "default_strip_flags",
)

cc_feature(
    name = "default_link_libs",
    feature_name = "default_link_libs",
)

# Rule-Level Passthrough
cc_feature(
    name = "user_compile_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:user_compile_flags",
)

cc_feature(
    name = "user_compile_defines",
    feature_name = "user_compile_defines",
)

cc_feature(
    name = "includes",
    overrides = "@rules_cc//cc/toolchains/features/legacy:includes",
)

cc_feature(
    name = "user_system_include_paths",
    feature_name = "user_system_include_paths",
)

cc_feature(
    name = "user_link_flags",
    overrides = "@rules_cc//cc/toolchains/features/legacy:user_link_flags",
)

# Configuration (Mode-Driven)

## Umbrella Mode Features
cc_mutually_exclusive_category(name = "compilation_mode")

cc_feature(
    name = "dbg",
    feature_name = "dbg",
    implies = [
        ":dbg_compile_flags",
        ":dbg_link_flags",
    ],
    mutually_exclusive = [":compilation_mode"],
)

cc_feature(
    name = "fastbuild",
    feature_name = "fastbuild",
    implies = [
        ":fastbuild_compile_flags",
        ":fastbuild_link_flags",
    ],
    mutually_exclusive = [":compilation_mode"],
)

cc_feature(
    name = "opt",
    feature_name = "opt",
    implies = [
        ":opt_compile_flags",
        ":opt_link_flags",
    ],
    mutually_exclusive = [":compilation_mode"],
)

## Fine-Grain Mode Flags
cc_feature(
    name = "dbg_compile_flags",
    feature_name = "dbg_compile_flags",
    requires_any_of = [":dbg"],
)

cc_feature(
    name = "fastbuild_compile_flags",
    feature_name = "fastbuild_compile_flags",
    requires_any_of = [":fastbuild"],
)

cc_feature(
    name = "opt_compile_flags",
    feature_name = "opt_compile_flags",
    requires_any_of = [":opt"],
)

cc_feature(
    name = "dbg_link_flags",
    feature_name = "dbg_link_flags",
    requires_any_of = [":dbg"],
)

cc_feature(
    name = "fastbuild_link_flags",
    feature_name = "fastbuild_link_flags",
    requires_any_of = [":fastbuild"],
)

cc_feature(
    name = "opt_link_flags",
    feature_name = "opt_link_flags",
    requires_any_of = [":opt"],
)

# Semantic Option Features

## Diagnostics
cc_feature(
    name = "treat_warnings_as_errors",
    feature_name = "treat_warnings_as_errors",
)

## Debug Information
cc_feature(
    name = "generate_debug_symbols",
    feature_name = "generate_debug_symbols",
)

## Runtime Linkage

cc_feature(
    name = "static_runtime",
    feature_name = "static_runtime",
)

cc_feature(
    name = "debug_runtime",
    feature_name = "debug_runtime",
)

cc_feature_set(
    name = "debug_static_runtime_requirement",
    all_of = [
        ":static_runtime",
        ":debug_runtime",
    ],
)

cc_feature_constraint(
    name = "release_static_runtime_requirement",
    all_of = [":static_runtime"],
    none_of = [":debug_runtime"],
)

cc_feature_constraint(
    name = "debug_dynamic_runtime_req",
    all_of = [":debug_runtime"],
    none_of = [":static_runtime"],
)

cc_feature_constraint(
    name = "release_dynamic_runtime_req",
    none_of = [
        ":static_runtime",
        ":debug_runtime",
    ],
)

cc_feature(
    name = "debug_dynamic_runtime",
    feature_name = "debug_dynamic_runtime",
    requires_any_of = [":debug_dynamic_runtime_requirement"],
)

cc_feature(
    name = "debug_static_runtime",
    feature_name = "debug_static_runtime",
    requires_any_of = [":debug_static_runtime_requirement"],
)

cc_feature(
    name = "release_dynamic_runtime",
    feature_name = "release_dynamic_runtime",
    requires_any_of = [":release_dynamic_runtime_requirement"],
)

cc_feature(
    name = "release_static_runtime",
    feature_name = "release_static_runtime",
    requires_any_of = [":release_static_runtime_requirement"],
)

## Optimization Technologies
cc_mutually_exclusive_category(name = "lto")

cc_feature(
    name = "thinlto",
    feature_name = "thinlto",
    mutually_exclusive = [":lto"],
)

cc_feature(
    name = "fulllto",
    feature_name = "fulllto",
    mutually_exclusive = [":lto"],
)

cc_mutually_exclusive_category(name = "fdo")

cc_feature(
    name = "fdo_instrument",
    mutually_exclusive = [":fdo"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:fdo_instrument",
)

cc_feature(
    name = "fdo_optimize",
    mutually_exclusive = [":fdo"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:fdo_optimize",
)

## Language Standard
cc_mutually_exclusive_category(name = "cxx_standard")

cc_feature(
    name = "cxx_standard_14",
    feature_name = "cxx_standard_14",
    mutually_exclusive = [":cxx_standard"],
)

cc_feature(
    name = "cxx_standard_17",
    feature_name = "cxx_standard_17",
    mutually_exclusive = [":cxx_standard"],
)

cc_feature(
    name = "cxx_standard_20",
    feature_name = "cxx_standard_20",
    mutually_exclusive = [":cxx_standard"],
)

cc_feature(
    name = "cxx_standard_23",
    feature_name = "cxx_standard_23",
    mutually_exclusive = [":cxx_standard"],
)

cc_feature(
    name = "cxx_standard_26",
    feature_name = "cxx_standard_26",
    mutually_exclusive = [":cxx_standard"],
)
