load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello_world",
    srcs = ["main.cpp"],
    defines = select({
        "@rules_cc//cc/compiler:clang": ["COMPILER_IS_CLANG"],
        "@rules_cc//cc/compiler:clang-cl": ["COMPILER_IS_CLANG_CL"],
        "@rules_cc//cc/compiler:msvc-cl": ["COMPILER_IS_CL"],
        "//conditions:default": [],
    }),
)

platform(
    name = "windows_x64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "windows_x86",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
    ],
)
