load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "hello_world",
    srcs = ["main.cpp"],
    defines = select({
        "@msvc_toolchains//compiler:clang": ["COMPILER_IS_CLANG"],
        "@msvc_toolchains//compiler:clang-cl": ["COMPILER_IS_CLANG_CL"],
        "@msvc_toolchains//compiler:msvc-cl": ["COMPILER_IS_CL"],
        "//conditions:default": [],
    }),
    deps = [
        "@msvc_toolchains//lib:kernel32",
    ],
)

platform(
    name = "windows_x64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "windows_x86",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:aarch64",
    ],
)
