module(
    name = "test_module",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_msvc", version = "0.1.0")
local_path_override(
    module_name = "toolchains_msvc",
    path = "../..",
)

toolchain = use_extension("@toolchains_msvc//:extensions.bzl", "toolchain")
toolchain.msvc_compiler(version = "14.50")
toolchain.msvc_compiler(version = "14.44")
toolchain.msvc_compiler(version = "14.40")
toolchain.msvc_compiler(version = "14.33")
toolchain.default_msvc(version = "14.44")
toolchain.clang_compiler(version = "22.1.0")
toolchain.clang_compiler(version = "20.1.0")
toolchain.default_clang(version = "22.1.0")
toolchain.windows_sdk(version = "26100")
toolchain.windows_sdk(version = "22621")
toolchain.windows_sdk(version = "19041")
toolchain.default_windows_sdk(version = "26100")
toolchain.default_compiler(compiler = "msvc-cl")
toolchain.target(arch = "x86")
toolchain.target(arch = "x64")
toolchain.target(arch = "arm64")
toolchain.host(arch = "x86")
toolchain.host(arch = "x64")
toolchain.host(arch = "arm64")
use_repo(toolchain, "msvc_toolchains")

register_toolchains("@msvc_toolchains//:all")
