module(
    name = "test_module",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_msvc", version = "0.1.0")
local_path_override(
    module_name = "toolchains_msvc",
    path = "../..",
)

toolchain = use_extension("@toolchains_msvc//:extensions.bzl", "toolchain")
toolchain.repo_name(name = "msvc_toolchains")
toolchain.toolchain_set(
    name = "default",
    targets = ["x86", "x64", "arm64"],
    hosts = ["x86", "x64", "arm64"],
    msvc_versions = ["14.50", "14.44", "14.40", "14.33"],
    default_msvc_version = "14.44",
    llvm_versions = ["22.1.0", "20.1.0"],
    default_llvm_version = "22.1.0",
    winsdk_versions = ["26100", "22621", "19041"],
    default_winsdk_version = "26100",
)
use_repo(toolchain, "msvc_toolchains")

register_toolchains("@msvc_toolchains//:all")
