module(
    name = "test_module",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_msvc", version = "0.1.0")
local_path_override(
    module_name = "toolchains_msvc",
    path = "../..",
)

toolchain = use_extension("@toolchains_msvc//:extensions.bzl", "toolchain")
toolchain.msvc_compiler(version = "14.44")
toolchain.windows_sdk(version = "26100")
use_repo(toolchain, "msvc_toolchains")

register_toolchains("@msvc_toolchains//:all")
