module(
    name = "test_module",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_msvc", version = "0.1.0")
local_path_override(
    module_name = "toolchains_msvc",
    path = "../..",
)

toolchain = use_extension("@toolchains_msvc//:extensions.bzl", "toolchain")
toolchain.repo_name(name = "msvc_toolchains")
toolchain.lock(file = "//:toolchains_msvc.json.lock")
toolchain.toolchain_set(
    name = "default",
    cl_with_lld_version = "22.1.0",
    features = ["generate_debug_symbols"],
    hosts = [
        "x86",
        "x64",
        "arm64",
    ],
    llvm_versions = [
        "22.1.0",
        "20.1.7",
    ],
    msvc_versions = [
        "14.50",
        "14.44",
        "14.40",
        "14.33",
    ],
    targets = [
        "x86",
        "x64",
        "arm64",
    ],
    winsdk_versions = [
        "26100",
        "22621",
        "19041",
    ],
)
toolchain.default_msvc_version(version = "14.44")
toolchain.default_llvm_version(version = "22.1.0")
toolchain.default_winsdk_version(version = "26100")
use_repo(toolchain, "msvc_toolchains")

register_toolchains("@msvc_toolchains//:all")
