load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

PLATFORMS = [
    "@llvm//platforms:macos_amd64",
    "@llvm//platforms:macos_arm64",
    "@llvm//platforms:linux_amd64_musl",
    "@llvm//platforms:linux_arm64_musl",
    "@llvm//platforms:windows_amd64",
]

# Size-focused flags: -Oz, section GC, thin LTO, strip. Exceptions stay enabled (code uses throw/catch).
_SIZE_COPTS = [
    "-std=c++20",
    "-Oz",
    "-DNDEBUG",
    "-ffunction-sections",
    "-fdata-sections",
    "-fno-ident",
    "-flto=thin",
]

_SIZE_LINKOPTS = select({
    "@platforms//os:windows": [
        "-Wl,--gc-sections",
        "-Wl,--icf=safe",
        "-Wl,--strip-all",
        "-flto=thin",
    ],
    "@platforms//os:linux": [
        "-Wl,--gc-sections",
        "-Wl,--icf=safe",
        "-Wl,--strip-all",
        "-flto=thin",
    ],
    "@platforms//os:macos": [
        "-Wl,-dead_strip",
        "-Wl,-x",
        "-flto=thin",
    ],
    "//conditions:default": [],
})

cc_binary(
    name = "msi-util",
    srcs = [
        "src/main.cpp",
        "src/cfb.cpp",
        "src/cfb.hpp",
        "src/msi.cpp",
        "src/msi.hpp",
        "src/cab.cpp",
        "src/cab.hpp",
    ],
    copts = _SIZE_COPTS,
    linkopts = _SIZE_LINKOPTS,
    deps = [
        "//third_party/argparse:argparse",
        "@zlib//:zlib",
    ],
)

[
    platform_transition_binary(
        name = "for_" + platform.split(":")[1],
        binary = ":msi-util",
        tags = ["manual"],
        target_platform = platform,
    )
    for platform in PLATFORMS
]

filegroup(
    name = "for_all_platforms",
    srcs = [
        ":for_" + platform.split(":")[1]
        for platform in PLATFORMS
    ],
    tags = ["manual"],
)
