module(
    name = "msi_util",
    version = "0.0.1",
    bazel_compatibility = [">=7.4.0"],
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "zlib", version = "1.3.1.bcr.8")

register_toolchains(
    "@llvm//toolchain:all",
)
