load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:args_list.bzl", "cc_args_list")
load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")
load("@rules_cc//cc/toolchains:feature_set.bzl", "cc_feature_set")

package(default_visibility = ["//visibility:public"])

# Main feature set for Clang targeting MSVC
cc_feature_set(
    name = "clang_features",
    all_of = [
        ":clang_no_legacy_features",
        # Enable .d files for clang
        ":clang_dependency_file_feature",
        ":clang_compiler_output_flags_feature",
        ":clang_compiler_input_flags_feature",
        ":clang_include_flags_feature",
        ":clang_preprocessor_defines_feature",
        ":clang_archiver_flags_feature",
        ":clang_user_compile_flags_feature",
        ":clang_user_link_flags_feature",
        ":clang_linker_param_file_feature",
        ":clang_libraries_to_link_feature",
        ":clang_output_execpath_flags_feature",
    ],
)

cc_feature(
    name = "clang_no_legacy_features",
    feature_name = "no_legacy_features",
)

cc_feature(
    name = "clang_compiler_output_flags_feature",
    args = [":clang_compiler_output_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:compiler_output_flags",
)

cc_args(
    name = "clang_compiler_output_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-o", "{output_file}"],
    format = {"output_file": "@rules_cc//cc/toolchains/variables:output_file"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:output_file",
)

cc_feature(
    name = "clang_compiler_input_flags_feature",
    args = [":clang_compiler_input_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:compiler_input_flags",
)

cc_args(
    name = "clang_compiler_input_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-c", "{source_file}"],
    format = {"source_file": "@rules_cc//cc/toolchains/variables:source_file"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:source_file",
)

cc_feature(
    name = "clang_dependency_file_feature",
    args = [":clang_dependency_file_args"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:dependency_file",
)

cc_args(
    name = "clang_dependency_file_args",
    actions = [
        "@rules_cc//cc/toolchains/actions:c_compile",
        "@rules_cc//cc/toolchains/actions:cpp_compile",
    ],
    args = [
        "-MD",
        "-MF",
        "{dependency_file}",
    ],
    format = {"dependency_file": "@rules_cc//cc/toolchains/variables:dependency_file"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:dependency_file",
)

cc_feature(
    name = "clang_include_flags_feature",
    args = [
        ":clang_quote_include_flags",
        ":clang_include_flags",
        ":clang_system_include_flags",
    ],
    overrides = "@rules_cc//cc/toolchains/features/legacy:include_paths",
)

cc_args(
    name = "clang_quote_include_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-iquote", "{quote_include_paths}"],
    format = {"quote_include_paths": "@rules_cc//cc/toolchains/variables:quote_include_paths"},
    iterate_over = "@rules_cc//cc/toolchains/variables:quote_include_paths",
)

cc_args(
    name = "clang_include_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-I{include_paths}"],
    format = {"include_paths": "@rules_cc//cc/toolchains/variables:include_paths"},
    iterate_over = "@rules_cc//cc/toolchains/variables:include_paths",
)

cc_args(
    name = "clang_system_include_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-isystem", "{system_include_paths}"],
    format = {"system_include_paths": "@rules_cc//cc/toolchains/variables:system_include_paths"},
    iterate_over = "@rules_cc//cc/toolchains/variables:system_include_paths",
)

cc_feature(
    name = "clang_preprocessor_defines_feature",
    args = [":clang_preprocessor_defines"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:preprocessor_defines",
)

cc_args(
    name = "clang_preprocessor_defines",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["-D{preprocessor_defines}"],
    format = {"preprocessor_defines": "@rules_cc//cc/toolchains/variables:preprocessor_defines"},
    iterate_over = "@rules_cc//cc/toolchains/variables:preprocessor_defines",
)

cc_feature(
    name = "clang_user_compile_flags_feature",
    args = [":clang_user_compile_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:user_compile_flags",
)

cc_args(
    name = "clang_user_compile_flags",
    actions = ["@rules_cc//cc/toolchains/actions:compile_actions"],
    args = ["{flag}"],
    format = {"flag": "@rules_cc//cc/toolchains/variables:user_compile_flags"},
    iterate_over = "@rules_cc//cc/toolchains/variables:user_compile_flags",
    requires_not_none = "@rules_cc//cc/toolchains/variables:user_compile_flags",
)

cc_feature(
    name = "clang_archiver_flags_feature",
    args = [":clang_archiver_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:archiver_flags",
)

cc_args_list(
    name = "clang_archiver_flags",
    args = [
        ":clang_ar_output",
        ":clang_ar_input",
    ],
)

cc_args(
    name = "clang_ar_output",
    actions = ["@rules_cc//cc/toolchains/actions:ar_actions"],
    args = ["/OUT:{output_execpath}"],
    format = {"output_execpath": "@rules_cc//cc/toolchains/variables:output_execpath"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:output_execpath",
)

cc_args(
    name = "clang_ar_input",
    actions = ["@rules_cc//cc/toolchains/actions:ar_actions"],
    args = ["{libraries_to_link}"],
    format = {"libraries_to_link": "@rules_cc//cc/toolchains/variables:libraries_to_link.name"},
    iterate_over = "@rules_cc//cc/toolchains/variables:libraries_to_link",
    requires_not_none = "@rules_cc//cc/toolchains/variables:libraries_to_link",
)

cc_feature(
    name = "clang_user_link_flags_feature",
    args = [":clang_user_link_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:user_link_flags",
)

cc_args(
    name = "clang_user_link_flags",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["{user_link_flags}"],
    format = {"user_link_flags": "@rules_cc//cc/toolchains/variables:user_link_flags"},
    iterate_over = "@rules_cc//cc/toolchains/variables:user_link_flags",
    requires_not_none = "@rules_cc//cc/toolchains/variables:user_link_flags",
)

cc_feature(
    name = "clang_linker_param_file_feature",
    args = [":clang_linker_param_file"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:linker_param_file",
)

cc_args(
    name = "clang_linker_param_file",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["@{param_file}"],
    format = {"param_file": "@rules_cc//cc/toolchains/variables:linker_param_file"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:linker_param_file",
)

cc_feature(
    name = "clang_libraries_to_link_feature",
    args = [":clang_libraries_to_link"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:libraries_to_link",
)

cc_args(
    name = "clang_libraries_to_link",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["{libraries_to_link}"],
    format = {"libraries_to_link": "@rules_cc//cc/toolchains/variables:libraries_to_link.name"},
    iterate_over = "@rules_cc//cc/toolchains/variables:libraries_to_link",
    requires_not_none = "@rules_cc//cc/toolchains/variables:libraries_to_link",
)

cc_feature(
    name = "clang_output_execpath_flags_feature",
    args = [":clang_output_execpath_flags"],
    overrides = "@rules_cc//cc/toolchains/features/legacy:output_execpath_flags",
)

cc_args(
    name = "clang_output_execpath_flags",
    actions = ["@rules_cc//cc/toolchains/actions:link_actions"],
    args = ["/OUT:{output_execpath}"],
    format = {"output_execpath": "@rules_cc//cc/toolchains/variables:output_execpath"},
    requires_not_none = "@rules_cc//cc/toolchains/variables:output_execpath",
)
