load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "hello_lib",
    srcs = ["src/current_version.cpp"],
    hdrs = ["include/hello_lib/current_version.h"],
    defines = select({
        "@rules_cc//cc/compiler:clang": ["COMPILER_IS_CLANG"],
        "@rules_cc//cc/compiler:clang-cl": ["COMPILER_IS_CLANG_CL"],
        "@rules_cc//cc/compiler:msvc-cl": ["COMPILER_IS_CL"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["//dyn_hello"],
)
